--- a/temoignage.html
+++ b/temoignage.html
@@ -67,7 +67,7 @@
 <h2 > Témoignages</h2>
   <div class="container">
   <div class="row temoignage">
-  <div class="col s6">
+  <div class="col l6 s12">
     <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
           <img src="images/cheriff.jpeg" class="image_témoignage"/>
@@ -86,7 +86,7 @@
       </div>
     </div>
 
-  <div class="col s6">
+  <div class="col l6 s12">
       <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
         <img src="images/juliee.jpeg" class="image_témoignage"/>
@@ -107,7 +107,7 @@
 </div>
 
   <div class="row temoignage">
-  <div class="col s6">
+  <div class="col l6 s12">
       <div class= "card">
       <div class="card-image waves-effect waves-block waves-light">
         <img src="images/marionn.jpeg" class="image_témoignage"/>
@@ -128,7 +128,7 @@
 </div>
 
 
-  <div class="col s6">
+  <div class="col l6 s12">
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
         <img src="images/see.jpeg" class="image_témoignage"/>
