--- a/FAQ.html
+++ b/FAQ.html
@@ -120,7 +120,7 @@
 
 
     <li>
-      <div class="collapsible-header"><i class="material-icons #ffc107 amber">arrow_forward</i> quelles sont les qualités personnelles qui peuvent faire votre succès dans le métier de développeur-intégrateur web?</div>
+      <div class="collapsible-header"><i class="material-icons #ffc107 amber">arrow_forward</i> Quelles sont les qualités personnelles qui peuvent faire votre succès dans le métier de développeur-intégrateur web?</div>
       <div class="collapsible-body">
         <span>
         Il faut avoir un intérêt pour le web! un peu de logique (il s’agit surtout de bon sens, pas de maths) motivation, persévérance, endurance.
@@ -131,7 +131,7 @@
     </li>
 
     <li>
-      <div class="collapsible-header"><i class="material-icons #ffc107 amber">arrow_forward</i> Quelle rémunération espérer en tant que développeur web ?</div>
+      <div class="collapsible-header"><i class="material-icons #ffc107 amber">arrow_forward</i> Quelle rémunération espérer en tant que développeur web junior ?</div>
       <div class="collapsible-body">
         <span>
       Des le début de sa carrière, un développeur web peut gagner très correctement sa vie ! Ce salaire varie en fonction du métier choisi et des langages web utilisés.
