--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="copyright" content="">
   <meta name="identifier-url" content="http://www.balisesmeta.com/">
 
-  <title></title>
+  <title> débouchés développement web </title>
 </head>
 
 
